added docker configuration

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>github-action</finalName>
 		<defaultGoal>spring-boot:run</defaultGoal>
 	</build>
 
