--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,17 +14,17 @@ jobs:
     services:
       postgres:
         image: postgres:15
-
-        ports:
-          - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
         env:
           PGHOST: localhost
           PGUSER: postgres
           PGPASSWORD: root
           PGDATABASE: mydb
           PGPORT: 5432
+
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        ports:
+          - 5432:5432
 
     steps:
      - uses: actions/checkout@v3
@@ -37,13 +37,20 @@ jobs:
      - name: Build with Maven
        run: mvn clean install
 
-     - name: Run database migrations
+     - name: Source Compiling
+       env:
+           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/mydb
+           DB_USERNAME: postgres
+           DB_PASSWORD: root
+           DB_HOSTNAME: localhost
+           MIX_ENV: test
        run: |
-          psql -h $PGHOST -U $PGUSER -d $PGDATABASE -p $PGPORT -f migrations.sql -W
-
-     - name: Cleanup temporary data
-       run: |
-              psql -h $PGHOST -U $PGUSER -d $PGDATABASE -p $PGPORT -c "DROP TABLE IF EXISTS temp_data"
+           mix deps.get
+           mix deps.compile
+           mix ecto.drop
+           mix ecto.create
+           mix ecto.migrate
+           mix test --trace
 
      - name: Build & push Docker image
        uses: mr-smithers-excellent/docker-build-push@v6
