changes in postgres database configuration

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,7 +49,7 @@ jobs:
 
 
        run: |
-              RUN psql -h $PGHOST -U $PGUSER -d $PGDATABASE -p $PGPORT  -c "CREATE TABLE mytable (id int, name varchar(255));"
+              RUN psql -h $PGHOST -U $PGUSER -d $PGDATABASE -p $PGPORT -e $PGPASSWORD -c "CREATE TABLE mytable (id int, name varchar(255));"
 
      - name: Build & push Docker image
        uses: mr-smithers-excellent/docker-build-push@v6
